--- a/index.Rmd
+++ b/index.Rmd
@@ -14,6 +14,9 @@ github-repo: ScPoEcon/ScPoEconometrics
 description: "SciencesPo UG Econometrics online textbook. No Maths."
 ---
 
+```{r, setup, include=FALSE}
+knitr::opts_chunk$set(comment=ScPoEconometrics:::getprompt())
+```
 
 
 # Syllabus {-}
