--- a/meta/tasks_ch1.Rmd
+++ b/meta/tasks_ch1.Rmd
@@ -41,13 +41,35 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Task 5
 
+1. How many observations are there in `mtcars`? `nrow(mtcars)`
+1. How many variables? `ncol(mtcars)`
+1. What is the average value of `mpg`? `mean(mtcars$mpg)`
+1. What is the average value of `mpg` for cars with more than 4 cylinders, i.e. with `cyl>4`? `mean(subset(mtcars,subset=cyl>4)$mpg)`
 
-1. Make sure to have the `mpg` dataset loaded by typing `data(mpg)` (and `library(ggplot2)` if you haven't!). Use the `table` function to find out how many cars were built by *mercury*? `table(mpg$manufacturer)`, `4`.
-1. What is the average year the audi's were built in this dataset? Use the function `mean` on the subset of column `year` that corresponds to `audi`. (Be careful: subsetting a `tibble` returns a `tibble` (and not a vector)!. so get the `year` column after you have subset the `tibble`.) `mean(subset(mpg,subset=manufacturer=="audi")$year)`, `mean(mpg[mpg$manufacturer=="audi","year"]$year)`
-1. Use the `dplyr` piping syntax from above first with `group_by` and then with `summarise(newvar=your_expression)` to find the mean `year` by manufacturer!
+
+# Task 6
+
+1. Write a for loop that counts down from 10 to 1, printing the value of the iterator to the screen.
+```{r}
+for (i in 10:1){
+  print(i)
+}
 ```
-mpg %>%
-  group_by(manufacturer) %>%
-  summarise(year=mean(year))
+1. Modify that loop to write "i iterations to go" where `i` is the iterator
+```{r}
+for (i in 10:1){
+  print(paste(i,"iterations to go"))
+}
 ```
+1. Modify that loop so that each iteration takes roughly one second. You can achieve that by adding the command `Sys.sleep(1)` below the line that prints "i iterations to go". 
+```{r}
+for (i in 10:1){
+  print(paste(i,"iterations to go"))
+  Sys.sleep(1)
+}
+```
+
+
+
+
 
