closes issue #70, #69. tutorials work now, closing #64. ping @jsay for trying out again. #61 closed per previous commit. bumped version to 0.1.3. moved meta/ to inst/teachers.

--- a/inst/teachers/tasks_ch1.Rmd
+++ b/inst/teachers/tasks_ch1.Rmd
@@ -2,7 +2,9 @@
 title: "tasks for session 1"
 author: "Florian Oswald"
 date: "8/18/2018"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
