--- a/07-Categorial-Vars.Rmd
+++ b/07-Categorial-Vars.Rmd
@@ -5,7 +5,7 @@ TODO: excluded category vs intercept?
 
 Up until now, we have encountered only examples with *continuous* variables $x$ and $y$, that is, $x,y \in \mathbb{R}$, so that a typical observation could have been $(y_i,x_i) = (1.5,5.62)$. There are many situations where it makes sense to think about the data in terms of *categories*, rather than continuous numbers. For example, whether an observation $i$ is *male* or *female*, whether a pixel on a screen is *black* or *white*, and whether a good was produced in *France*, *Germany*, *Italy*, *China* or *Spain* are all categorical classifications of data. 
 
-Probably the simplest type of categorical variable is the *binary*, *boolean*, or just *dummy* variable. As the name suggests, it can take on only two values, `0` and `1`, or `TRUE` and `FALSE`. Even though this is an extremely parsimonious way of encoding that, it is a very powerful tool that allows us to represent that a certain observation $i$ **is a member** of a certain category $j$. For example, we could have a variable called `is.male` that is `TRUE` whenever $i$ is male, and `FALSE` otherwise. A common way to represent this is with the so-called *indicator function* $\mathbf{1}[\text{condition}]$, 
+Probably the simplest type of categorical variable is the *binary*, *boolean*, or just *dummy* variable. As the name suggests, it can take on only two values, `0` and `1`, or `TRUE` and `FALSE`. Even though this is an extremely parsimonious way of encoding that, it is a very powerful tool that allows us to represent that a certain observation $i$ **is a member** of a certain category $j$. For example, we could have a variable called `is.male` that is `TRUE` whenever $i$ is male, and `FALSE` otherwise. A common way to represent this is with the so-called *indicator function* $\mathbf{1}[\text{condition}]$. For example, to encode whether subject $i$ is male or female, one could do this:
 
 \begin{align*}
 \text{is.male}_i &= \mathbf{1}[\text{sex}_i==\text{male}], \\
@@ -29,7 +29,6 @@ $$
 y_i = \beta_0 + \beta_1 x_i + \varepsilon_i,x_i\in\{0,1\} (\#eq:zero-one-reg)
 $$
 
-Let's run that regression here:
 
 ```{r x-zero-one-data,echo=FALSE}
 set.seed(19)
@@ -43,16 +42,23 @@ x <- dta[, "x"]
 y <- dta[, "y"]
 #y = 2 + 3*x + u
 zero_one = lm(y~x,dta)
-zero_one
 ```
 
-We have seen in the `app` launched via
+Let's generate some random data and look at the regression output of \@ref(eq:zero-one-reg):
+
+```{r}
+head(dta)
+summary(zero_one)
+```
+
+
+This setup is identical to what we have seen in the `app` launched via
 
 ```{r,eval=FALSE}
 launchApp("reg_dummy")
 ```
 
-that this regression simplifies to the straight line connecting the mean, or the *expected value* of $y$ when $x=0$, i.e. $E[y|x=0]$, to the mean when $x=1$, i.e.  $E[y|x=1]$. It is useful to remember that the *unconditional mean* of $y$, i.e. $E[y]$, is going to be the result of regressing $y$ only on an intercept, illustrated by the red line. The red line will always lie in between both conditional means. Let's just refresh our memory by replicating the graph from the `app` here in figure \@ref(fig:x-zero-one):
+We learned that this regression simplifies to the straight line connecting the mean, or the *expected value* of $y$ when $x=0$, i.e. $E[y|x=0]$, to the mean when $x=1$, i.e.  $E[y|x=1]$. It is useful to remember that the *unconditional mean* of $y$, i.e. $E[y]$, is going to be the result of regressing $y$ only on an intercept, illustrated by the red line. The red line will always lie in between both conditional means. Let's just refresh our memory by replicating the graph from the `app` here in figure \@ref(fig:x-zero-one):
 
 ```{r x-zero-one,fig.align='center',fig.cap='regressing $y \\in \\mathbb{R}$ on $x \\in \\{0,1\\}$. The red line is $E[y]$',echo=FALSE}
 
@@ -79,13 +85,11 @@ text(1.05, mean(dta[dta$x == 1, "y"]), "E[Y | X = 1]", pos = 4)
 curve(expr = expr, from = min(x)-10, to = max(x)+10, add = TRUE, col = "black")
 segments(x0 = x, y0 = y, x1 = x, y1 = (y + errors), col = "green")
 abline(a=mean(dta$y),b=0,col="red",lw=2)
-dta$is.male = factor(x)
 
-dummy_reg = lm(y~is.male,dta)
 
 ```
 
-Now suppose for a moment that in fact 
+Now let's encode $x$ to represent male and female, 
 
 $$
 x_i = \begin{cases}
@@ -93,7 +97,7 @@ x_i = \begin{cases}
             0 & \text{if }i\text{ is female}. \\
    \end{cases}
 $$
-and that $y_i$ is a measure of $i$'s annual labor income. The dummy variable version of the above regression is just
+and let's suppose that $y_i$ is a measure of $i$'s annual labor income. The dummy variable version of the above regression is just
 
 $$
 y_i = \beta_0 + \alpha \text{is.male}_i + \varepsilon_i (\#eq:dummy-reg)
@@ -103,15 +107,26 @@ where
 \text{is.male}_i &= \mathbf{1}[x_i==1], \\
 \end{align*}
 
-and the resulting estimates of $\beta_1$ and $\alpha$ are in fact the same. Here we see the estimates from \@ref(eq:dummy-reg):
+Given our definitions, those two formulations are equivalent. What changes, is the representation of `x` and `is.male` for `R`. Here is how I ran model \@ref(eq:dummy-reg):
+
+```{r, dummy-reg}
+dta$is.male = factor(x)  # convert x to factor
+dummy_reg = lm(y~is.male,dta)
+```
+
+Looking at the output of this, the resulting estimates of $\beta_1$ and $\alpha$ are of course the same:
 
 ```{r,echo=FALSE}
 summary(dummy_reg)
 ```
 
-It is interesting to note that the estimate for $\alpha = `r round(coef(dummy_reg)[2],4)`$ (and $\beta_1 = `r round(coef(zero_one)[2],4)`$!) is the same as the difference in conditional means: 
+More interesting, however, is that both of them are equal to the difference in conditional means: 
 
 $$E[y|x=1] - E[y|x=0]=`r round(mean(dta[dta$x == 1, "y"]) - mean(dta[dta$x == 0, "y"]),4)`.$$ 
+
+```{block,type="note"}
+A dummy variable measures the difference or the *offset* in the mean of the response variable, $E[y]$, **conditional** on $x$ belonging to some category. In our artificial example, the coefficient $\alpha$ informs us that men earn on average 3.756 units more than women.
+```
 
 
 ## Categorical Variables in `R`: `factor`
@@ -135,7 +150,7 @@ You can see that this is almost identical, just the *labels* are different.
 
 ### More Levels
 
-We can go *binary* categorical variables such as `TRUE` vs `FALSE`. For example, suppose that $x$ measures educational attainment, i.e. it is now something like $x_i \in \{\text{high school,some college,BA,MSc}\}$. In `R` parlance, *high school, some college, BA, MSc* are the **levels of factor $x$**. A straightforward extension of the above would dictate to create one dummy variable for each category (or level), like 
+We can go beyond *binary* categorical variables such as `TRUE` vs `FALSE`. For example, suppose that $x$ measures educational attainment, i.e. it is now something like $x_i \in \{\text{high school,some college,BA,MSc}\}$. In `R` parlance, *high school, some college, BA, MSc* are the **levels of factor $x$**. A straightforward extension of the above would dictate to create one dummy variable for each category (or level), like 
 
 \begin{align*}
 \text{has.HS}_i &= \mathbf{1}[x_i==\text{high school}] \\
